# sarvam-tts

./: README.md  pyproject.toml  run.sh
sarvam_tts/: app.py  prompts.py
